# LossLandscape

./: .flake8  .gitignore  README.md  README.zh-CN.md  lint.sh  pyproject.toml
demos/: __init__.py  runner.py
demos/base/: __init__.py  experiment.py  registry.py  utils.py
demos/configs/: README.md
demos/configs/burgers_comparison/: physics_no_train.yaml
demos/configs/mnist_comparison/: cnn_simple.yaml  lenet.yaml  mlp_large.yaml  mlp_small.yaml
demos/configs/regression_comparison/: mse.yaml  regularized.yaml
demos/configs/wide_landscape_comparison/: 01_init_with_pca.yaml  02_trained_with_pca.yaml  03_brief_trained_with_pca.yaml  README.md
demos/projects/: __init__.py
demos/projects/burgers/: __init__.py  data.py  experiment.py  losses.py  models.py
demos/projects/burgers/configs/: mse.yaml  mse_no_train.yaml  mse_no_train_wide.yaml  mse_with_train.yaml  physics.yaml  physics_with_train.yaml  quick_test.yaml
demos/projects/mnist/: __init__.py  data.py  experiment.py  models.py
demos/projects/mnist/configs/: cnn_simple.yaml  lenet.yaml  mlp_large.yaml  mlp_small.yaml  quick_test.yaml
demos/projects/regression/: __init__.py  data.py  experiment.py  losses.py  models.py
demos/projects/regression/configs/: mse.yaml  quick_test.yaml  regularized.yaml
loss_landscape/: __init__.py  __main__.py  cli.py
loss_landscape/core/: README.md  __init__.py  explorer.py  hessian.py  storage.py  writer.py
loss_landscape/examples/: README.md  __init__.py  advanced_loss_computation.py  basic_usage.py  complete_example.py  pca_trajectory.py  simple_example.py  training_trajectory.py  with_regularizer.py
web/: .gitignore  README.md  eslint.config.mjs  next.config.js  package-lock.json  package.json
web/src/app/: globals.css  i18n.tsx  layout.tsx  page.tsx  theme.tsx
web/src/app/components/: DraggablePanel.tsx  Header.tsx  HessianAnalysis.tsx  HoverCard.tsx  LossChart.tsx  LossLandscape1D.tsx  LossLandscape2D.tsx  LossLandscape3D.tsx  LossVolumeRender3D.tsx  LossVolumeSlice2D.tsx  Modal.tsx  (+1 more)
web/src/lib/: db.ts  import-npz.ts  landscape-export.ts  npz.ts  python-bridge.ts  validate-landscape.ts
web/src/types/: isosurface.d.ts
(+11 files in other folders)
